welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:11: error: not found: value placer
    placer(2)
    ^